renkko/media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - image: lscr.io/linuxserver/radarr:6.2.1
        name: radarr
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
          subPath: library
        - name: media
          mountPath: /downloads
          subPath: downloads
        ports:
        - containerPort: 7878
        resources:
          limits:
            cpu: "2"
            memory: 2048Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 100m
            memory: 256Mi
      securityContext:
        fsGroup: 1000
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config
      - name: media
        hostPath:
          path: /var/mnt/media
          type: Directory
