renkko/media/radarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "radarr.senk0.com"
  rules:
    - backendRefs:
        - name: radarr
          port: 7878
